<resources>
    <string name="app_name">UsingCoordinatorLayout</string>

    <string name="fab_and_snackbar">Fab And Snackbar</string>
    <string name="fab_two_widgets">Fab Follows Widget</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="custom_behavior">Custom Behavior</string>

    <string name="show_snackbar">Show Snackbar</string>

    <string name="first">First Card</string>
    <string name="second">Second Card</string>
    <string name="third">Third Card</string>
    <string name="collapse_string"></string>
    <string name="long_latin">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
</resources>
